final commit, program is working with many user processes and writing to the file fine. For some reason it will occasionally give a failure to fork res unavailable on low number forks.

--- a/README
+++ b/README
@@ -24,3 +24,5 @@
 	- OSS and User also both have SIGINT handling so that if you have to ctrl+C it will destroy shared memory and terminate.
 
 - Running the program - to run the program you can type "make" to do the compilation, and run with "./oss". This program takes no arguments, and outputs to a file called "output.txt". It will output to the file when a process requests a resource, when a process releases a resource, when OSS determines it is safe to allocate to a process, when a process enters the blocked state, and when it is removed from the blocked state.
+
+#NOTE - Sometimes when running this program it will give the "failed to fork: resource unavailable" error. The program perrors this and will terminate. I am not sure what is causing it, sometimes it happens on a low process fork like 9 or 14, sometimes it happens on fork 27. I am not sure what is causing it but the program does terminate. Also once or twice while running the program I got errors from the user process not able to attach to shared memory, the oss process was still running to my understanding, although it could have just had the termination output buffered and terminated destroying shared memory and left user processes looking for shared memory that was destroyed. I did not experience any seg faults running this program many times. Also sometimes the output file is smaller, around 100+ lines, sometimes it is larger 300-400 lines.
