project finished, migrating to GH

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-#Author: Brian Goodrich Project 5 CS 4760 11/22/22
+#Author: Brian Goodrich
 
 - The purpose of this project is to serve as a simulated resource manager for an operating system. 
 
